--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+      (function() {
+        const stored = localStorage.getItem("theme") || "system";
+        const root = document.documentElement;
+        
+        if (stored === "system") {
+          const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
+          root.setAttribute("data-theme", prefersDark ? "dark" : "light");
+        } else {
+          root.setAttribute("data-theme", stored);
+        }
+      })();
+    </script>
     <script type="module" src="/src/index.jsx"></script>
 
     <!--
